--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </head>
     <body>
         
-        <script src="jquery.js" async defer></script>
-        <script src="wisher.js" async defer></script>
-        <script src="app.js" async defer></script>
+        <script src="jquery.js"></script>
+        <script src="wisher.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
