--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+
+        <div id="logindiv">
+            <select name="" id="lang">
+                <option value="en">English</option>
+                <option value="en">Spanish</option>
+            </select>
+            <input type="button" value="login" id="login"/>
+        </div>
+        <h1 id="greeting"></h1>
         
         <script src="jquery.js"></script>
         <script src="wisher.js"></script>
